--- a/package.json
+++ b/package.json
@@ -9,12 +9,25 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "clipboard": "^2.0.8",
     "core-js": "^3.6.5",
+    "echarts": "^5.2.2",
     "element-ui": "^2.15.6",
+    "fuse.js": "^6.5.2",
+    "lodash": "^4.17.21",
+    "mockjs": "^1.1.0",
+    "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
+    "screenfull": "^6.0.0",
+    "sortablejs": "^1.14.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
+    "vue-splitpane": "^1.0.6",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -27,8 +40,6 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
     "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   }
